Closed Bug 1731155 Opened 4 years ago Closed 4 years ago

Wayland: Crash in [@ nsMenuPopupFrame::MoveTo]

Categories

(Core :: Widget: Gtk, defect, P2)

defect

Tracking

()

RESOLVED FIXED
94 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox-esr91 --- unaffected
firefox92 --- unaffected
firefox93 --- unaffected
firefox94 --- fixed

People

(Reporter: mccr8, Assigned: stransky)

References

(Blocks 1 open bug)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

Crash report: https://crash-stats.mozilla.org/report/index/7834f780-15b0-4b1b-a04f-57c500210916

Reason: SIGSEGV /SEGV_MAPERR

Top 10 frames of crashing thread:

0 libxul.so nsMenuPopupFrame::MoveTo layout/xul/nsMenuPopupFrame.cpp:2380
1 libxul.so nsWindow::WaylandPopupSetDirectPosition widget/gtk/nsWindow.cpp:2223
2 libxul.so nsWindow::NativeMove widget/gtk/nsWindow.cpp:2521
3 libxul.so nsWindow::Create widget/gtk/nsWindow.cpp:5478
4 libxul.so nsBaseWidget::CreateChild widget/nsBaseWidget.cpp:503
5 libxul.so nsView::CreateWidgetForPopup view/nsView.cpp:615
6 libxul.so nsMenuPopupFrame::CreateWidgetForView layout/xul/nsMenuPopupFrame.cpp:350
7 libxul.so nsMenuPopupFrame::AttributeChanged layout/xul/nsMenuPopupFrame.cpp:2297
8 libxul.so mozilla::PresShell::AttributeChanged layout/base/PresShell.cpp:4362
9 libxul.so mozilla::dom::MutationObservers::NotifyAttributeChanged dom/base/MutationObservers.cpp:150

comment on the crash: "So what happens is that I have placed an extension icon on the rightmost corner of the bookmarks bar and when I click on it to open its popover it opens but when I click outside the popover but inside the browser window, the whole browser crashes. I reproduced this very issue with two different extensions, so I think it's a browser issue."

Similar comment on another crash: "I placed an extension on the bookmarks menu (for accessibility reason) and when I clicked it its pop-over did open but when I clicked outside the pop-over to close it, the browser crashed."

bp-1e5a8bc3-d7cb-402f-a0d5-0e0650210915

Keywords: regression
Summary: Crash in [@ nsMenuPopupFrame::MoveTo] → Wayland: Crash in [@ nsMenuPopupFrame::MoveTo]

Hello, both the comments mentioned above are from me, are from the same setup and the crashes which follow the steps described only seem to happen on 'Compact' density, not on Normal or Touch density mode.

Looks like popupFrame is null here which means we're called early.

Priority: -- → P2
Assignee: nobody → stransky
Status: NEW → ASSIGNED
Pushed by stransky@redhat.com: https://hg.mozilla.org/integration/autoland/rev/15fc005b6c7d [Wayland] Check popupFrame at nsWindow::WaylandPopupSetDirectPosition(), r=emilio
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 94 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: