Bug 1731155 [Wayland] Check popupFrame at nsWindow::WaylandPopupSetDirectPosition(), r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D126183